// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialFormComponent should compile 1`] = `
<seek-credential-form
  form={[Function FormGroup]}
  submitted={[Function EventEmitter_]}
>
  <mat-card>
    <mat-card-title>
      Login
    </mat-card-title>
    <mat-card-content>
      <form
        class="ng-untouched ng-pristine ng-invalid"
        novalidate=""
      >
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine ng-invalid"
              formcontrolname="email"
              matinput=""
              placeholder="Endereço de email"
              type="text"
            />
            
            <mat-error>
              
              <span>
                Email obrigatório
              </span>
              
            </mat-error>
          </mat-form-field>
        </p>
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine ng-invalid"
              formcontrolname="password"
              matinput=""
              placeholder="Senha"
              type="password"
            />
            
            <mat-error>
              
              <span>
                Senha obrigatória
              </span>
              
            </mat-error>
          </mat-form-field>
        </p>
        
        <p
          class="loginButtons"
        >
          <button
            mat-button=""
            type="submit"
          >
            Login
          </button>
        </p>
      </form>
    </mat-card-content>
  </mat-card>
</seek-credential-form>
`;

exports[`CredentialFormComponent should disable form if pending 1`] = `
<seek-credential-form
  form={[Function FormGroup]}
  submitted={[Function EventEmitter_]}
>
  <mat-card>
    <mat-card-title>
      Login
    </mat-card-title>
    <mat-card-content>
      <form
        class="ng-untouched ng-pristine"
        novalidate=""
      >
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine"
              disabled=""
              formcontrolname="email"
              matinput=""
              placeholder="Endereço de email"
              type="text"
            />
            
          </mat-form-field>
        </p>
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine"
              disabled=""
              formcontrolname="password"
              matinput=""
              placeholder="Senha"
              type="password"
            />
            
          </mat-form-field>
        </p>
        
        <p
          class="loginButtons"
        >
          <button
            mat-button=""
            type="submit"
          >
            Login
          </button>
        </p>
      </form>
    </mat-card-content>
  </mat-card>
</seek-credential-form>
`;

exports[`CredentialFormComponent should display error message if provided 1`] = `
<seek-credential-form
  errorMessage={[Function String]}
  form={[Function FormGroup]}
  submitted={[Function EventEmitter_]}
>
  <mat-card>
    <mat-card-title>
      Login
    </mat-card-title>
    <mat-card-content>
      <form
        class="ng-untouched ng-pristine ng-invalid"
        novalidate=""
      >
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine ng-invalid"
              formcontrolname="email"
              matinput=""
              placeholder="Endereço de email"
              type="text"
            />
            
            <mat-error>
              
              <span>
                Email obrigatório
              </span>
              
            </mat-error>
          </mat-form-field>
        </p>
        <p>
          <mat-form-field>
            <input
              class="ng-untouched ng-pristine ng-invalid"
              formcontrolname="password"
              matinput=""
              placeholder="Senha"
              type="password"
            />
            
            <mat-error>
              
              <span>
                Senha obrigatória
              </span>
              
            </mat-error>
          </mat-form-field>
        </p>
        
        <mat-error>
           Credenciais inválidas 
        </mat-error>
        <p
          class="loginButtons"
        >
          <button
            mat-button=""
            type="submit"
          >
            Login
          </button>
        </p>
      </form>
    </mat-card-content>
  </mat-card>
</seek-credential-form>
`;
